# doomnukem_retry

./: CMakeLists.txt
include/: doomnukem.h
libft/: Makefile
libft/include/: libft.h
libft/src/: ft_bzero.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_strdel.c  ft_strsplit.c  ft_strsplit_del.c
sdl2/SDL2.framework/Versions/A/Headers/: SDL_config.h
src/: canvas.c  color.c  init.c  main.c
